<resources>
    <string name="app_name">Keg</string>
    <string name="start">Start</string>
    <string name="send">Send</string>
    <string name="stop">Stop</string>

    <string name="search_name">Keg Pump!</string>

    <string name="not_connected">Not Connected</string>
    <string name="startup1">Callback Received</string>
    <string name="startup2">Found Devic</string>
    <string name="startup3">Scanning Device</string>
    <string name="connected">Connected</string>

    <string name="basic">Basic</string>
    <string name="debug">Debug</string>
    <string name="connect">Connect</string>
    <string name="basic_pressure">Select Pressure (PSI)</string>
    <string name="period">.</string>
    <string name="dig1">Digit1</string>
    <string name="dig2">Digit2</string>
    <string name="dig3">Digit3</string>
    <string name="dig4">Digit4</string>


    <string name="refpressure">reference_Pressure</string>
    <string name="pressure">display_pressure</string>
    <string name="error">error</string>
    <string name="kP">kP</string>
    <string name="kI">kI</string>
    <string name="kD">kD</string>
    <string name="P">P</string>
    <string name="I">I</string>
    <string name="D">D</string>
    <string name="integral">Integral</string>
    <string name="pump">Pump</string>
    <string name="version">keg_version</string>
    <string name="update_wait">update_Wait</string>
    <string name="set_time">settle_time</string>
    <string name="keg_size">Size</string>
    <string name="dP">dP</string>
    <string name="dT">dPdT</string>
    <string name="mode">mode</string>
    <string name="start_p">start_pressure</string>
    <string name="blow">test_pump</string>
    <string name="test_time">calibration_time</string>
    <string name="batt">battery</string>
    <string name="test_wait">wait_time</string>
    <string name="fullness">fullness</string>
    <string name="question">Waiting...</string>

    <string name="brightness">appease compiler</string>
    <string name="disp_update">appease compiler</string>

    <string name="from_arduino">From</string>
    <string name="to_arduino">To</string>

    <string name="waiting">Waiting for next</string>

    <color name="connectColor">#f00</color>

    <integer-array name="Services">
        <item>0xDEAD</item>
        <item>0x180D</item>
    </integer-array>

    <integer-array name="writeCharacteristics">
        <item>0xF001</item>
        <item>0xF007</item>
        <item>0xE002</item>
        <item>0xE003</item>
        <item>0xD000</item>
        <item>0xD001</item>
        <item>0xD002</item>
        <item>0xD003</item>
        <item>0xD004</item>
        <item>0xC000</item>
        <item>0xC001</item>
    </integer-array>

    <integer-array name="notificationCharacteristics">
        <item>0xF000</item>
        <item>0xF002</item>
        <item>0xF003</item>
        <item>0xF004</item>
        <item>0xF005</item>
        <item>0xF006</item>
        <item>0xF008</item>
        <item>0xF009</item>
        <item>0xF00A</item>
        <item>0xF00B</item>
        <item>0xE000</item>
        <item>0xE001</item>
        <item>0xE004</item>
    </integer-array>

    <integer-array name="basicNotification">
        <item>0xF000</item>
        <item>0xE001</item>
        <item>0xF00B</item>
    </integer-array>

    <integer-array name="basicWrite">
        <item>0xF001</item>
        <item>0xE003</item>
    </integer-array>

</resources>
